[package]
name = "year-2015"
version = "0.1.0"
edition = "2021"
description = "Solution for AoC 2015"
authors = ["Dariusz Dajka <dariusz.dajka@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[dependencies]
common = { path = "../common" }
itertools = "0.10.3"
md5 = "0.7.0"